hphp/hack/test/typecheck/references/refs_in_array/element_assign1.php.exp
File "element_assign1.php", line 5, characters 8-9:
References are only allowed as function call arguments (Parsing[1002])
